# projeto_mma

./: README.md  pyproject.toml
Data/: Dados_tratados.parquet
aula_18_bootcamp/: README.md  pyproject.toml
projeto_mma/: pyproject.toml
projeto_mma/src/: get_my_ip.py
src/: dados_df.parquet  extract.py  main.py
transformacao/: etl.py  funcoes.py
